@@ -596,6 +596,13 @@ COpt::memoryPick();
 		$this->checkInput($dRules);
 		$this->validateRequiredFields($dRules, __FUNCTION__);
 
+		// checking to the duplicate names
+		foreach($dRules as $dRule){
+			if($this->exists($dRule)){
+				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Discovery rule [%s] already exists', $dRule['name']));
+			}
+		}
+
 		$druleids = DB::insert('drules', $dRules);
 
 		$dChecksCreate = array();
@@ -657,11 +664,17 @@ COpt::memoryPick();
 		$dRulesUpdate = $dCheckidsDelete = $dChecksCreate = array();
 		foreach($dRules as $dRule){
 
+			// checking to the duplicate names
+			if(strcmp($dRulesDb[$dRule['druleid']]['name'], $dRule['name']) != 0){
+				if($this->exists($dRule)){
+					self::exception(ZBX_API_ERROR_PARAMETERS, _s('Discovery rule [%s] already exists', $dRule['name']));
+				}
+			}
+
 			$dRulesUpdate[] = array(
 				'values' => $dRule,
 				'where' => array('druleid' => $dRule['druleid'])
 			);
-
 
 			$dbChecks = $dRulesDb[$dRule['druleid']]['dchecks'];
 			$newChecks = $dRule['dchecks'];
